# hamonikr-chatbot

./: .gitignore  LICENSE  README.md  VENV_SETUP.md  activate-venv.sh  index.html  main.js  meson.build  package-lock.json  package.json  requirements.txt
.github/workflows/: release.yml
.serena/: project.yml
build-aux/flatpak/: io.github.Bavarder.Bavarder.Devel.json  io.github.Bavarder.Bavarder.json
data/: io.github.Bavarder.Bavarder.appdata.xml.in.in  io.github.Bavarder.Bavarder.desktop.in.in  io.github.Bavarder.Bavarder.gschema.xml.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  install  rules
debian/patches/: series
po/: LINGUAS  POTFILES  ar.po  az.po  cs.po  de.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  hamonikr-chatbot.pot  he.po  hu.po  it.po  ko.po  meson.build  nl.po  pl.po  pt.po  ru.po  sv.po  ta.po  th.po  tr.po  uk.po  zh_Hans.po  zh_Hant.po
scripts/: hamonikr-chatbot-smart  release.sh  run-dev.sh  run-hamonikr-chatbot.sh  setup-venv-system.sh  setup-venv.sh
snap/: snapcraft.yaml
src/: bavarder.gresource.xml  bavarder.in  constants.py.in  hamonikr-chatbot-launcher.in  main.py  meson.build  style.css
src/providers/: __init__.py  anthropic.py  base.py  basehfimage.py  gemini.py  groq.py  hfbasechat.py  huggingface.py  local.py  meson.build  mistral.py  ollama.py  openai.py  openaigpt4o.py  openaigpt5.py  openaiimage.py  openrouter.py  perplexity.py  provider_item.py  together.py  vllm.py
src/views/: about_window.py  export_dialog.py  preferences_window.blp  preferences_window.py  save_dialog.py  (+2 more)
(+7 files in other folders)
