providers_dir = join_paths(MODULE_DIR, 'providers')

providers_sources = [
  '__init__.py',
  'base.py',
  'basehfimage.py',
  'baseimage.py',
  'hfbasechat.py',
  'local.py',
  'openai.py',
  'openaigpt35turbo.py',
  'openaigpt4.py',
  'openaigpt4o.py',
  'openaigpt5.py',
  'openaiimage.py',
  'anthropic.py',
  'mistral.py',
  'gemini.py',
  'perplexity.py',
  'groq.py',
  'openrouter.py',
  'ollama.py',
  'vllm.py',
  'huggingface.py',
  'together.py',
  'petals.py',
  'provider_item.py',
  'stablediffusion.py',
]

PY_INSTALLDIR.install_sources(providers_sources, subdir: providers_dir)